# Task_4

./: CMakeLists.txt  main.cpp
src/: AbstractOperation.cpp  AbstractOperation.h  BuildReversePolishNotation.cpp  BuildReversePolishNotation.h  Calculator.cpp  Calculator.h  CollectionOperations.cpp  CollectionOperations.h
